# quotaclimat

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile_api_import  Dockerfile_api_to_s3  Dockerfile_factiva  Dockerfile_factiva_stats_to_s3  Dockerfile_factiva_to_s3  Dockerfile_ingest  Dockerfile_ingest_db  Dockerfile_lemonde_web  Dockerfile_ouest_france  Dockerfile_press_ingestion  Dockerfile_s3_factiva_to_postgre  Dockerfile_sitemap  Dockerfile_stop_word  Dockerfile_stop_words  Dockerfile_streamlit  Introduction.py  LICENSE  README.md  README_PRINT_MEDIA.md  alembic.ini  alembic_factiva.ini  app.py  docker-compose.yml  docker-entrypoint-factiva.sh  docker-entrypoint-lemonde-web.sh  docker-entrypoint-ouest-france.sh  docker-entrypoint-press-ingestion.sh  docker-entrypoint-s3-factiva-to-postgre.sh  docker-entrypoint.sh  docker-entrypoint_stop_word.sh  duck_db_main.py  duckdb.Dockerfile  econ_from_excel_to_json.py  keywords_economie.json  local.settings.json  nlp.ipynb  (+4 more)
.ipynb_checkpoints/: Lemonde_all-checkpoint.ipynb  Untitled-checkpoint.ipynb
.streamlit/: secrets.toml
_dbt/: dbt_project.yml
advertising/: README.md  advertising_classification_Camembert.py  advertising_classification_SetFit.py  advertising_segmentation.py  compute_performances.py  create_datasets.py  format_labelstudio_output.py  label_mapping.json  model_exploration.py  requirements.txt
alembic/: env.py
alembic_factiva/: env.py  script.py.mako
data/: channels.xlsx
data_analytics/: data_coverage.py
data_processing/: read_format_deduplicate.py
entrypoints/: advertising_detection.sh  advertising_exportation.sh  dbt.sh  detect_keywords.sh  mediatree_import.sh  stop_word.sh
i8n/: srt-to-mediatree-format-parquet .py  srt-to-mediatree-format-parquet.py  srt-to-mediatree-format.py
infrastructure/: .env.secrets.dist  .gitignore  Makefile  Readme.md  mise.toml
insfrastructure/: .env.dist  Makefile  Readme.md
metabase_proxy/: Dockerfile  nginx.conf
mockwebsite/: 20minutes_sitemap.xml  20minutes_website.html  README.md  bfmtv_sitemap.xml  challenges_sitemap.xml  cnews_sitemap.xml  francebleu_sitemap.xml  franceinfo_sitemap.xml  franceinter_sitemap.xml  lacroix_sitemap.xml  lamontagne_sitemap.xml  laprovence_sitemap.xml  lefigaro_localhost_sitemap.xml  lefigaro_sitemap.xml  leparisien_sitemap.xml  lepoint_sitemap.xml  letelegramme_sitemap.xml  lexpress_sitemap.xml  liberation_sitemap.xml  mediapart_sitemap.xml  mediapart_website.html  midilibre_sitemap.xml  nicematin_sitemap.xml  nouvelobs_sitemap.xml  ouestfrance_sitemap.xml  republiquepyrenees_sitemap.xml  sitemap_news_figaro_3.xml  telerama_sitemap.xml
my_dbt_project/: README.md  dbt_project.yml
my_dbt_project_print_media/: .gitignore  dbt_project.yml
notebooks/: 20221031_COP26 analysis-NLP.ipynb  20221031_COP26 analysis.ipynb  20221031_Test NLP filtering.ipynb  Analyse COPXX télévision.ipynb  COP27 - Tutoriel analyse niveau 0.ipynb  COP27_analysis.ipynb  Media articles crawler.ipynb  Quickstart.ipynb  Quickstart_v2.ipynb  Quota_Climat-Quick_start.ipynb  articles_manifestants_2.xlsx  articles_megabassines.xlsx  eda_charte_journalisme_ecologie.ipynb  eda_programme_tv.ipynb  eda_quickstart.ipynb  eda_scrapping_BERT.ipynb  eda_scrapping_LDA.ipynb  eda_scrapping_LDA_WIP.ipynb  eda_scrapping_WIP_Cleaning.ipynb  eda_sitemap_crawling.ipynb  eda_sitemap_get_started.ipynb  eda_topics_des_articles.ipynb  er_COP27_analysis.ipynb  explo_database.ipynb  explo_ingestion_monitoring.ipynb  get_started_sitemap.ipynb  keywords_tfidf.xlsx  nlp_as.ipynb  nlp_charte_journalisme.ipynb  nlp_interrogate_wikipedia_questions.ipynb  nlp_mediatree_filtering.ipynb  nlp_sitemap.ipynb  (+4 more)
(+5251 files in other folders)
