[tool.poetry]
name = "quotaclimat"
version = "0.1.15"
description = ""
authors = ["Rambier Estelle <estelle.rambier@hotmail.fr>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13.0"
pandas = "^1.5.3"
advertools = "^0.13.2"
xmltodict = "^0.13.0"
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.5"

streamlit = "^1.27.0"
streamlit-tags = "^1.2.8"
# streamlit
plotly = "^5.10.0" 
spacy = "^3.4.2" 
matplotlib = "^3.6.1" 
seaborn = "^0.12.1" 
nltk = "^3.7"
beautifulsoup4 = "^4.11.1"
scikit-learn = "^1.2.0"
wordcloud = "^1.8.2.2"
asyncio = "^3.4.3"
tomli = "^2.0.1"
pandera = "^0.17.2"
aiohttp = "^3.8.6"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^3.0.0"
poetry-bumpversion = "^0.3.1"
pre-commit = "^2.18.1"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
invoke = "^1.7.3"

# also to run
# poetry run python3 -m spacy download fr_core_news_md