[tool.poetry]
name = "quotaclimat"
version = "1.0.17"
description = ""
authors = [
    "Rambier Estelle <estelle.rambier@hotmail.fr>",
    "Paul Leclercq <paul@epauler.fr>"
]
readme = "README.md"

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "INFO"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13.0"
pandas = "^2.2.3"
advertools = "^0.14.1"
xmltodict = "^0.13.0"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.5"
alembic = "^1.13.1"
beautifulsoup4 = "^4.11.1"
asyncio = "^3.4.3"
tomli = "^2.0.1"
aiohttp = "^3.10.8"
pytest-asyncio = "^0.23.5"
swifter = "^1.4.0"
tenacity = "^8.2.3"
sentry-sdk = "^2.13.0"
modin = {extras = ["ray"], version = "^0.32.0"}
numpy = "1.26.4"
openpyxl = "^3.1.5"
requests = "^2.32.3"
[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.group.dev.dependencies]
coverage = "^7.5.4"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
poetry-bumpversion = "^0.3.1"
pre-commit = "^2.18.1"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
invoke = "^1.7.3"